--- a/src/assets/bundle.css
+++ b/src/assets/bundle.css
@@ -531,21 +531,749 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.text-\[100px\] {
-  font-size: 100px;
+.absolute {
+  position: absolute;
 }
 
-.text-\[red\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-text-opacity));
+.relative {
+  position: relative;
 }
 
-.text-\[\#00ff00\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 255 0 / var(--tw-text-opacity));
+.left-0 {
+  left: 0px;
 }
 
-.text-\[\#5ad95a\] {
+.left-\[10px\] {
+  left: 10px;
+}
+
+.left-\[184px\] {
+  left: 184px;
+}
+
+.left-\[21px\] {
+  left: 21px;
+}
+
+.left-\[54px\] {
+  left: 54px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-\[11px\] {
+  top: 11px;
+}
+
+.top-\[12px\] {
+  top: 12px;
+}
+
+.top-\[8px\] {
+  top: 8px;
+}
+
+.top-\[0px\] {
+  top: 0px;
+}
+
+.top-\[3px\] {
+  top: 3px;
+}
+
+.left-\[14px\] {
+  left: 14px;
+}
+
+.left-\[24px\] {
+  left: 24px;
+}
+
+.left-\[59px\] {
+  left: 59px;
+}
+
+.top-\[14px\] {
+  top: 14px;
+}
+
+.top-\[21px\] {
+  top: 21px;
+}
+
+.top-\[22px\] {
+  top: 22px;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-\[47px\] {
+  top: 47px;
+}
+
+.top-\[17px\] {
+  top: 17px;
+}
+
+.top-\[15px\] {
+  top: 15px;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.bottom-\[0px\] {
+  bottom: 0px;
+}
+
+.bottom-\[30px\] {
+  bottom: 30px;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.bottom-\[\] {
+  bottom: ;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+
+.bottom-\[130px\] {
+  bottom: 130px;
+}
+
+.bottom-\[150px\] {
+  bottom: 150px;
+}
+
+.bottom-\[170px\] {
+  bottom: 170px;
+}
+
+.left-24 {
+  left: 6rem;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[200px\] {
+  left: 200px;
+}
+
+.left-\[300px\] {
+  left: 300px;
+}
+
+.left-\[250px\] {
+  left: 250px;
+}
+
+.left-\[270px\] {
+  left: 270px;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.ml-\[\] {
+  margin-left: ;
+}
+
+.ml-\[56px\] {
+  margin-left: 56px;
+}
+
+.ml-\[67px\] {
+  margin-left: 67px;
+}
+
+.ml-\[76px\] {
+  margin-left: 76px;
+}
+
+.ml-\[96px\] {
+  margin-left: 96px;
+}
+
+.ml-\[97px\] {
+  margin-left: 97px;
+}
+
+.ml-\[50px\] {
+  margin-left: 50px;
+}
+
+.ml-\[90px\] {
+  margin-left: 90px;
+}
+
+.ml-\[10px\] {
+  margin-left: 10px;
+}
+
+.ml-\[100px\] {
+  margin-left: 100px;
+}
+
+.ml-\[107px\] {
+  margin-left: 107px;
+}
+
+.ml-\[106px\] {
+  margin-left: 106px;
+}
+
+.ml-\[117px\] {
+  margin-left: 117px;
+}
+
+.ml-\[137px\] {
+  margin-left: 137px;
+}
+
+.ml-\[147px\] {
+  margin-left: 147px;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[150px\] {
+  margin-top: 150px;
+}
+
+.mt-\[1px\] {
+  margin-top: 1px;
+}
+
+.mt-\[13px\] {
+  margin-top: 13px;
+}
+
+.mt-\[138px\] {
+  margin-top: 138px;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-\[1\] {
+  margin-top: 1;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.ml-\[110px\] {
+  margin-left: 110px;
+}
+
+.ml-\[115px\] {
+  margin-left: 115px;
+}
+
+.ml-\[119px\] {
+  margin-left: 119px;
+}
+
+.ml-\[12px\] {
+  margin-left: 12px;
+}
+
+.ml-\[123px\] {
+  margin-left: 123px;
+}
+
+.ml-\[125px\] {
+  margin-left: 125px;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.ml-\[155px\] {
+  margin-left: 155px;
+}
+
+.ml-\[195px\] {
+  margin-left: 195px;
+}
+
+.ml-\[235px\] {
+  margin-left: 235px;
+}
+
+.ml-\[240px\] {
+  margin-left: 240px;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.list-none {
+  list-style-type: none;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-\[\] {
+  gap: ;
+}
+
+.gap-\[40px\] {
+  gap: 40px;
+}
+
+.gap-\[46px\] {
+  gap: 46px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#272323\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 35 35 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
+}
+
+.bg-orange-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-purple-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
+}
+
+.bg-violet-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
+.bg-violet-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 233 254 / var(--tw-bg-opacity));
+}
+
+.bg-orange-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.px-\[110px\] {
+  padding-left: 110px;
+  padding-right: 110px;
+}
+
+.px-\[120px\] {
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.font-\[Oswald\] {
+  font-family: Oswald;
+}
+
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-\[\'Prompt\'\] {
+  font-family: 'Prompt';
+}
+
+.font-\[\] {
+  font-family: ;
+}
+
+.font-\[\'\'\] {
+  font-family: '';
+}
+
+.font-\[\'Pr\'\] {
+  font-family: 'Pr';
+}
+
+.font-\[\'Promp\'\] {
+  font-family: 'Promp';
+}
+
+.font-\[\'Oswald\'\] {
+  font-family: 'Oswald';
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-normal {
+  line-height: 1.5;
+}
+
+.leading-snug {
+  line-height: 1.375;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#272323\] {
   --tw-text-opacity: 1;
-  color: rgb(90 217 90 / var(--tw-text-opacity));
+  color: rgb(39 35 35 / var(--tw-text-opacity));
+}
+
+.text-\[\#bd4343\] {
+  --tw-text-opacity: 1;
+  color: rgb(189 67 67 / var(--tw-text-opacity));
+}
+
+.text-neutral-700 {
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity));
+}
+
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
+.text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-purple-600 {
+  --tw-text-opacity: 1;
+  color: rgb(147 51 234 / var(--tw-text-opacity));
+}
+
+.text-zinc-800 {
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
